--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,12 @@ color: #000;
 color: #101017;
 */
 
-* {
+*,
+*::after,
+*::before {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
 }
 
 html {
@@ -22,6 +24,8 @@ body {
     color: #777777;
     padding: 3rem;
     background-color: #000;
+
+    box-sizing: border-box;
 }
 
 .header {
