--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
     line-height: 1.7;
     color: #777777;
     padding: 3rem;
-    background-color: #f0f0f0;
+    background-color: #9daac5;
 
     box-sizing: border-box;
     height: 2000px;
@@ -64,10 +64,10 @@ body {
     background-color: rgba(0, 0, 0, 0.8);
 }
 
-.text-box {
+.header__text-box {
     z-index: 2;
     position: absolute;
-    top: 35%;
+    top: 40%;
     left: 50%;
     transform: translate(-45%, -50%);
 }
@@ -77,7 +77,7 @@ body {
     text-transform: uppercase;
 }
 
-.heading-primary-main {
+.heading--primary-main {
     display: block;
     font-size: 7.5rem;
     font-weight: 400;
@@ -86,11 +86,11 @@ body {
     animation: moveInleft 1s ease-out;
 }
 
-.heading-primary-sub {
+.heading--primary-sub {
     display: block;
     font-size: 2rem;
     font-weight: 400;
-    letter-spacing: 13.5px;
+    letter-spacing: 1.3rem;
 
     animation: moveInright 1s ease-out;
 }
@@ -139,8 +139,8 @@ body {
     }
 }
 
-.button-box {
-    margin-top: 6rem;
+.header__button-box {
+    margin-top: 10rem;
     z-index: 2;
     text-align: center;
 }
@@ -179,13 +179,13 @@ body {
     transition: all 0.5s;
 }
 
-.btn-white {
-    background-color: #40d6da;
+.btn--white {
+    background-color: #3e66bd;
     color: #ffffff;
 }
 
-.btn-white::after {
-    background-color: #40d6da;
+.btn--white::after {
+    background-color: #3e66bd;
 }
 
 .btn:hover:after {
@@ -193,75 +193,8 @@ body {
     opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
     animation: moveInBottom 0.5s ease-out 0.75s;
     animation-fill-mode: backwards;
 }
 
-.header__messege {
-    position: relative;
-    bottom: 250px;
-    width: 500px;
-    float: right;
-}
-
-.messege {
-    z-index: 2;
-    box-sizing: border-box;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.block {
-    padding: 5px;
-    overflow: hidden;
-    height: 0px;
-    animation: showDiv 4.5s forwards;
-}
-
-@keyframes showDiv {
-    0%,
-    99% {
-        height: 0px;
-    }
-    100% {
-        height: 120px;
-    }
-}
-
-.box {
-    border-radius: 20px;
-    width: 60px;
-    height: 60px;
-    background: #f0f0f0;
-    box-shadow: 0 0 0 #cccccc, 0 0 0 #ffffff, 10px 10px 10px #cccccc inset, -10px -10px 10px #ffffff inset;
-    animation: anime 3s cubic-bezier(0.16, 1, 0.3, 1) 1s forwards alternate;
-}
-
-@keyframes anime {
-    0% {
-        width: 60px;
-        height: 60px;
-        background: #f0f0f0;
-        box-shadow: 0 0 0 #cccccc, 0 0 0 #ffffff, 10px 10px 10px #cccccc inset, -10px -10px 10px #ffffff inset;
-    }
-    25% {
-        width: 60px;
-        height: 60px;
-        background: #f8f8f8;
-        box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff, 0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
-    }
-    50% {
-        width: 60px;
-        height: 240px;
-        background: #f8f8f8;
-        box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff, 0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
-    }
-    100% {
-        width: 480px;
-        height: 240px;
-        background: #fafafa;
-        box-shadow: 40px 40px 40px #cccccc, 0 0 0 #ffffff, 0 0 0 #cccccc inset, 2px 2px 2px #ffffff inset;
-    }
-}
